# C-_to_C-_converter

./: .gitignore  CMakeLists.txt  Makefile  README.md  lexical_analyser_testing.cc  semantic_analyser_testing.cc
source/: code_generator.cpp  code_generator.hpp  custom_exceptions.hpp  file_handler.cpp  file_handler.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  tokenizer.cpp  tokenizer.hpp  validator.cpp  validator.hpp
test_example_files/: test1.cs  test2.cs
tests/: full_testing.cc  semantic_analyser_testing.cc  syntax_analyser_testing.cc
tests/inputs/: 10.cs  11.cs  12.cs  13.cs  14.cs  2.cs  25.cs  3.cs  4.cs  5.cs  6.cs  8.cs  9.cs
tests/outputs/1/: A.hpp
tests/outputs/10/: A.hpp
tests/outputs/11/: A.cpp  A.hpp
tests/outputs/12/: A.hpp
tests/outputs/13/: A.cpp  A.hpp
tests/outputs/14/: A.cpp  A.hpp
tests/outputs/2/: A.hpp
tests/outputs/25/: AnotherClass.cpp  AnotherClass.hpp  Base.cpp  Base.hpp  Derived.cpp  Derived.hpp  YetAnotherClass.cpp  YetAnotherClass.hpp
tests/outputs/3/: A.hpp
tests/outputs/4/: A.cpp  A.hpp
tests/outputs/5/: A.hpp
tests/outputs/6/: A.hpp  B.cpp  B.hpp
tests/outputs/8/: A.cpp  A.hpp
tests/outputs/9/: A.cpp  A.hpp
